# openmelee

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  meson.build  source_files.sh
assets/characters/: fox.json  game_and_watch.json
assets/scenes/: title.lua
assets/stages/: final_destination.json
libs/: sol.hpp
libs/sfd/: sfd.cpp
source/: main.cpp  main.h
source/SDK/: sdk.h
source/SDK/card/: card.cpp  card.h
source/SDK/dvd/: dvd.cpp  dvd.h
source/SDK/gx/: gx.cpp  gx.h
source/SDK/hsd/: hsd.cpp  hsd.h
source/SDK/os/: os.cpp  os.h
source/SDK/pad/: pad.cpp  pad.h
source/SDK/vi/: vi.cpp  vi.h
source/card/: card.cpp  card.h
source/db/: db.cpp  db.h
source/dvd/: dvd.cpp  dvd.h
source/engine/: engine.cpp  engine.h
source/engine/character/: character.cpp  character.h
source/engine/characters/: character.cpp  character.h  characters.cpp  characters.h
source/engine/gl/: compile_shader.cpp  compile_shader.h  gl.h  load_shader.cpp  load_shader.h
source/engine/gui/: gui.cpp  gui.h
source/engine/iso/: iso.cpp  iso.h
source/engine/scene/: scene.cpp  scene.h  scenes.cpp  scenes.h
source/engine/scenes/: scene.cpp  scene.h  scenes.cpp  scenes.h
source/engine/stages/: stage.cpp  stage.h  stages.cpp  stages.h
source/engine/state/: state.cpp  state.h
source/gx/: gx.cpp  gx.h
source/hsd/: hsd.cpp  hsd.h
source/logger/: logger.cpp  logger.h
source/os/: os.cpp  os.h
source/pad/: pad.cpp  pad.h
source/stub/: stub.cpp  stub.h
source/vi/: vi.cpp  vi.h
